force-app/main/default/objects/Account/fields/Active_Contract_Count__c.field-meta.xml
<CustomField>
    <fullName>Active_Contract_Count__c</fullName>
    <description
  >Number of active Contracts on the account. TODO: convert to a roll-up summary on Contract.IsActive once Account-Contract is master-detail (currently a standard lookup, which platform does not allow rollups on). For now this is maintained by the Contract trigger.</description>
    <inlineHelpText
  >Count of currently active contracts. Maintained by the Contract trigger; do not edit manually.</inlineHelpText>
    <label>Active Contract Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>