force-app/main/default/objects/Account/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <description
  >Northstar segmentation tier for the account (Strategic, Enterprise, Commercial, SMB, Partner Managed). Backed by the Northstar_Customer_Segment global value set so Account, Opportunity, and the territory-style rollup all share one source of truth.</description>
    <inlineHelpText
  >Tier the account by strategic value and size. Drives routing, deal-desk thresholds, and segment-based automation.</inlineHelpText>
    <label>Customer Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Customer_Segment</valueSetName>
    </valueSet>
</CustomField>