force-app/main/default/objects/Account/fields/Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Score__c</fullName>
    <description
  >Customer health score on a 0-100 scale, set by the customer-success motion (manually or via integration). 0 = critical risk, 100 = perfect health. Read by the renewal-risk evaluation.</description>
    <inlineHelpText
  >0-100. Higher is healthier. Maintained by CS; surfaced in renewal-risk reports.</inlineHelpText>
    <label>Health Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>