force-app/main/default/objects/Account/fields/Partner_Influenced__c.field-meta.xml
<CustomField>
    <fullName>Partner_Influenced__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >True when this account's pipeline has been influenced by a partner referral. Distinct from Partner Led Sales Motion: an account can be Direct sales motion but still partner-influenced.</description>
    <inlineHelpText
  >Check if a partner influenced the account (referral, joint marketing, etc.). Used by partner-attribution reporting.</inlineHelpText>
    <label>Partner Influenced</label>
    <type>Checkbox</type>
</CustomField>