force-app/main/default/objects/Account/fields/QQ_Default_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>QQ_Default_Price_Book__c</fullName>
    <description
  >Default price book the Quicker Quotes flow pre-selects, and writes back, when creating a quote from this Account.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>QQ_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>