force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description
  >Northstar sales region for the account (NAMER, EMEA, APAC, LATAM, Public Sector). Backed by Northstar_Region GVS and reused on Lead and Opportunity for consistent territory rollup.</description>
    <inlineHelpText
  >Sales region used for routing, pipeline reporting, and territory-style fallback metadata.</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Region</valueSetName>
    </valueSet>
</CustomField>