force-app/main/default/objects/Account/fields/Renewal_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Risk_Level__c</fullName>
    <description
  >Coarse renewal-risk classification for the account. Inline value set (not a GVS) because this field is account-only — Contract/Case use their own risk picklists with the same labels. Set by the renewal-risk job.</description>
    <inlineHelpText
  >Coarse renewal risk: Low / Medium / High / Critical. Maintained by the renewal-risk job; do not edit unless triaging.</inlineHelpText>
    <label>Renewal Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>