force-app/main/default/objects/Account/fields/Routing_Reason__c.field-meta.xml
<CustomField>
    <fullName>Routing_Reason__c</fullName>
    <description
  >Free-text capture of why the account was assigned to its current owner / queue. Stamped by the routing flow or trigger; surfaced in reports to explain non-obvious assignments.</description>
    <inlineHelpText
  >Last routing decision explanation. Set by the assignment trigger/flow — manual edits are overwritten on the next routing pass.</inlineHelpText>
    <label>Routing Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>