force-app/main/default/objects/Account/fields/Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier__c</fullName>
    <description
  >Premium support tier the account is entitled to (Standard, Premium, Premium 24x7, Strategic). Backed by Northstar_Support_Tier GVS; mirrored on Contract, Order, Quote, and Case so reps and CSMs see one consistent value.</description>
    <inlineHelpText
  >Entitled support tier. Drives Case routing SLA and the renewal motion.</inlineHelpText>
    <label>Support Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Northstar_Support_Tier</valueSetName>
    </valueSet>
</CustomField>