force-app/main/default/objects/Account/fields/Territory_Segment__c.field-meta.xml
<CustomField>
    <fullName>Territory_Segment__c</fullName>
    <description
  >Denormalized "Region - Customer Segment" string (e.g. "NAMER - Enterprise"), a denormalized routing key used for territory-style routing. Kept in sync by the Account trigger when Region__c or Customer_Segment__c changes.</description>
    <inlineHelpText
  >Auto-stamped territory string in the form "Region - Segment". Do not edit manually; updated by the Account trigger.</inlineHelpText>
    <label>Territory Segment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>