force-app/main/default/objects/Account/fields/Website_Domain__c.field-meta.xml
<CustomField>
    <fullName>Website_Domain__c</fullName>
    <description
  >Northstar: the bare lower-case domain of Website, used by Northstar_Account_Match to dedupe on domain rather than the full URL (https://example.com/pricing and http://www.example.com both reduce to example.com). Plain text (NOT a formula) because Salesforce matching rules reject formula fields as match criteria; populated on every save by the Account_Before_Save_Set_Website_Domain before-save flow, which strips the protocol, a leading www., and any path/query/fragment (from the first /, ?, or #). Blank Website yields blank.</description>
    <label>Website Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>