force-app/main/default/objects/Account/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>true</active>
    <description
  >Active paying customers — has at least one active Contract.</description>
    <label>Customer</label>
</RecordType>