force-app/main/default/objects/Account/recordTypes/Prospect.recordType-meta.xml
<RecordType>
    <fullName>Prospect</fullName>
    <active>true</active>
    <description>Companies in pipeline but not yet customers.</description>
    <label>Prospect</label>
</RecordType>